tests/purs/failing/ConflictingExports/B.purs
module B where

thing :: Int
thing = 2
